# 90gram

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  fly.toml  hello.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
.claude/skills/api/: SKILL.md
.github/workflows/: fly-deploy-admin.yml  fly-deploy-api.yml  fly-deploy-jobs.yml  fly-deploy-scraper.yml  fly-deploy.yml
apps/admin/: Dockerfile  eslint.config.mjs  fly.toml  package.json  tsconfig.json  vite.config.ts
apps/api/: Dockerfile  fly.toml  openapi.json  package.json  tsconfig.json  tsup.config.ts
apps/jobs/: Dockerfile  README.md  fly.toml  package.json  tsconfig.json  tsup.config.ts
apps/mobile/: alias-colors.css  app.json  babel.config.js  base-colors.css  eas.json  expo-env.d.ts  fingerprint.config.js  global.css  index.js  metro.config.js  package.json  semantic-colors.css  tsconfig.json
apps/scraper/: Dockerfile  README.md  fly.toml  package.json  pyproject.toml  scrapy.cfg  scrapyd.conf  setup.py
apps/scraper/fixtures/: coldcutshotwax_sample.json  dancingvinyl_sample.json  deejay_sample.json  discogs_sample.json  juno_sample.json
apps/scraper/getvinyls_scraper/: genres.py  items.py  middlewares.py  pipelines.py  settings.py
apps/scraper/getvinyls_scraper/spiders/: coldcutshotwax.py  dancingvinyl.py  deejay.py  discogs.py  juno.py
apps/scraper/tests/: test_genres.py
infra/meilisearch/: fly.toml
scripts/: package.json  shops.json  tsconfig.json
scripts/src/: discover-shops.ts  load-env.ts
(+181 files in other folders)
